--- a/beamerinnerthemestralsund.sty
+++ b/beamerinnerthemestralsund.sty
@@ -1,10 +1,19 @@
+% Copyright 2016 by Henner M. Kruse <henner.m.kruse@fh-stralsund.de>
+%
+% This file may be distributed and/or modified
+%
+% 1. under the LaTeX Project Public License and/or
+% 2. under the GNU Public License.
+%
+% See the file doc/licenses/LICENSE for more details.
+
 \mode<presentation>
 
 % Title page
 \defbeamertemplate*{title page}{stralsund}[1][]
 { 
 	\vskip2cm
-	\begin{beamercolorbox}[wd=.8\paperwidth,ht=1.6cm]{title page header}%
+	\begin{beamercolorbox}[wd=.8\paperwidth,ht=1.6cm,center]{title page header}%
 		\usebeamerfont{title}\inserttitle%
 	\end{beamercolorbox}%
 	\vskip.5cm
