--- a/stralsund-example.tex
+++ b/stralsund-example.tex
@@ -1,6 +1,17 @@
+% Copyright 2016 by Henner M. Kruse <henner.m.kruse@fh-stralsund.de>
+%
+% This file may be distributed and/or modified
+%
+% 1. under the LaTeX Project Public License and/or
+% 2. under the GNU Public License.
+%
+% See the file doc/licenses/LICENSE for more details.
+
 \documentclass{beamer}
+
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+
 \title{There Is No Largest Prime Number}
 \date[ISPN ’80]{27th International Symposium of Prime Numbers}
 \author[Euclid]{Euclid of Alexandria}
