--- a/beamercolorthemestralsund.sty
+++ b/beamercolorthemestralsund.sty
@@ -1,3 +1,12 @@
+% Copyright 2016 by Henner M. Kruse <henner.m.kruse@fh-stralsund.de>
+%
+% This file may be distributed and/or modified
+%
+% 1. under the LaTeX Project Public License and/or
+% 2. under the GNU Public License.
+%
+% See the file doc/licenses/LICENSE for more details.
+
 \mode<presentation>
 
 % colors
