--- a/beamercolorthemestralsund.sty
+++ b/beamercolorthemestralsund.sty
@@ -1,12 +1,14 @@
 \mode<presentation>
 
 % colors
+\usepackage{xcolor}
 \definecolor{csred}{cmyk}{0.1,1,0.8,0}
 \definecolor{mbblue}{cmyk}{0.8,0.56,0.08,0.4}
 \definecolor{wsturqoise}{cmyk}{1,0.3,0.3,0.2}
 \definecolor{etiyellow}{cmyk}{0,0.45,1,0.0}
 \definecolor{bggray}{cmyk}{0,0,0,0.0824}
 \definecolor{fggray}{cmyk}{0,0,0,0.498}
+\colorlet{maincolor}{etiyellow}
 
 % Settings
 \setbeamerfont*{section in head/foot}{size={\fontsize{14}{26}}}
@@ -18,13 +20,13 @@
 \setbeamercolor*{frametitle}{fg=black}
 \setbeamercolor*{framesubtitle}{fg=black}
 \setbeamercolor*{sidebar}{fg=fggray}
-\setbeamercolor*{orangebox}{bg=etiyellow}
+\setbeamercolor*{orangebox}{bg=maincolor}
 \setbeamercolor*{author}{fg=black}
 \setbeamercolor*{date}{fg=black}
-\setbeamercolor*{item}{fg=etiyellow}
-\setbeamercolor*{section in head/foot}{bg=etiyellow}
+\setbeamercolor*{item}{fg=maincolor}
+\setbeamercolor*{section in head/foot}{bg=maincolor}
 \setbeamercolor*{author in head/foot}{bg=bggray}
-\setbeamercolor*{tagline-de}{fg=etiyellow,bg=white}
+\setbeamercolor*{tagline-de}{fg=maincolor,bg=white}
 \setbeamercolor*{tagline-en}{fg=fggray,bg=bggray}
 
 % Items
