--- a/beamerthemestralsund.sty
+++ b/beamerthemestralsund.sty
@@ -15,9 +15,9 @@
 \renewcommand{\familydefault}{\sfdefault}
 
 % Settings
-\useinnertheme{Stralsund}
-\useoutertheme{Stralsund}
-\usecolortheme{Stralsund}
+\useinnertheme{stralsund}
+\useoutertheme{stralsund}
+\usecolortheme{stralsund}
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{blocks}[rounded][shadow=true]  
