--- a/stralsund-example.tex
+++ b/stralsund-example.tex
@@ -7,12 +7,13 @@
 %
 % See the file doc/licenses/LICENSE for more details.
 
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
 \title{There Is No Largest Prime Number}
+\subtitle{The proof uses reductio ad absurdum.}
 \date[ISPN ’80]{27th International Symposium of Prime Numbers}
 \author[Euclid]{Euclid of Alexandria}
 \institute[]{}
